Header element center + header on mobile fix

--- a/src/components/MobileNavbar/MobileNavbar.module.css
+++ b/src/components/MobileNavbar/MobileNavbar.module.css
@@ -37,13 +37,15 @@
 }
 
 .titleBar {
-    transform: translateX(-50%);
-
-    @media (max-width: $mantine-breakpoint-md) {
-        transform: translateX(0);
+    @media (max-width: rem(320px)) {
+        display: none;
     }
 }
 
 .title {
     font-family: var(--mantine-font-family-monospace);
+
+    @media (max-width: rem(384px)) {
+        font-size: rem(24px);
+    }
 }
